# 3D_GameSkeleton

./: .gitmodules  CMakeLists.txt  README.md
dependencies/: CMakeLists.txt
dependencies/glad/: CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
dependencies/stb_image/: CMakeLists.txt
src/: main.c  main.h
src/engine/: gameloop.c  options.c  options.h  window.c  window.h
src/io/: input.c  input.h  shaderLoader.c  textureLoader.c  textureLoader.h
src/render/: camera.c  camera.h  renderPipeline.c  renderPipeline.h  shaderLoader.h
src/shader/: deferred.frag  deferred.vert  skybox.frag  skybox.vert  temporary.frag  temporary.vert
